test(drive): use Android-compatible source reader